[tool.poetry]
name = "buck"
version = "0.1.0"
description = "S3-Compatible Object Storage Server"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
xmltodict = "^0.13.0"
requests = "^2.28.1"
starlette = "^0.19.1"
boto3 = "^1.24.42"
click = "^8.1.3"
typer = "^0.6.1"
rich = "^12.5.1"
pydantic = "^1.9.1"
bidict = "^0.22.0"
fs = "^2.4.16"
arrow = "^1.2.2"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
awscli = "^1.25.42"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
