[tool.poetry]
name = "buck"
version = "0.1.0"
description = "S3-Compatible Object Storage Server"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
xmltodict = "^0.13.0"
requests = "^2.31.0"
starlette = "^0.27.0"
boto3 = "^1.28.50"
click = "^8.1.7"
typer = "^0.9.0"
rich = "^13.5.3"
pydantic = "2.3.0"
bidict = "^0.22.1"
fs = "^2.4.16"
arrow = "^1.2.3"
python-magic = "^0.4.27"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
awscli = "^1.25.42"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
